--- a/spec/fixtures/views/Home_info_shows_info_page/view.html
+++ b/spec/fixtures/views/Home_info_shows_info_page/view.html
@@ -123,6 +123,38 @@
 </div>
 <div class='card mt-4'>
 <div class='card-header'>
+<h4 class='mb-0'>Unterstützen</h4>
+</div>
+<div class='card-body'>
+<p>Das Programmieren und Betreiben dieser Seite kostet viel Zeit – mittlerweile sind über 1.000 Stunden in die Entwicklung rund um den Feuerwehrsport geflossen. Ich mache das gern und mit Leidenschaft, vor allem, weil ich hoffe, dass die Seite den Sport weiterbringt und vielen Wettkämpfen hilft.</p>
+<p>Damit <b>feusport.de</b> auch weiterhin <b>kostenfrei, werbefrei und für alle nutzbar</b> bleibt, freue ich mich über jede Form der Unterstützung.</p>
+<p>Hier sind drei Wege, wie ihr helfen könnt:</p>
+<ol>
+<li>
+<p>
+<div class='fw-bold'>Individuelle Software-Lösungen gesucht?</div>
+Ich bin beruflich als Entwickler tätig. Falls euer Unternehmen eine maßgeschneiderte Anwendung braucht – meldet euch gern!
+</p>
+</li>
+<li>
+<p>
+<div class='fw-bold'>Spende via PayPal</div>
+Wenn ihr einen kleinen Betrag übrig habt und die Seite euch hilft, könnt ihr mir ganz unkompliziert via PayPal etwas zukommen lassen:
+</p>
+<p>👉 <a href="https://paypal.me/georglimbach?country.x=DE&amp;locale.x=de_DE">https://paypal.me/georglimbach</a></p>
+</li>
+<li>
+<p>
+<div class='fw-bold'>Motivation durch Feedback</div>
+Lob, nette Nachrichten oder einfach ein Dankeschön – das motiviert mehr, als ihr denkt! 😊
+</p>
+</li>
+</ol>
+<p>Danke, dass ihr die Seite nutzt und vielleicht auch unterstützt – so können wir gemeinsam den Feuerwehrsport stärken.</p>
+</div>
+</div>
+<div class='card mt-4'>
+<div class='card-header'>
 <h4 class='mb-0'>Verantwortlichkeit</h4>
 </div>
 <div class='card-body'>
