--- a/spec/fixtures/views/Score_List_edit_list_shows_form_and_updates-edit-person/view.html
+++ b/spec/fixtures/views/Score_List_edit_list_shows_form_and_updates-edit-person/view.html
@@ -155,6 +155,7 @@ Erweitert
 </div>
 <div class='col-md-6'>
 <div class="form-group date optional score_list_date"><label class="date optional" for="score_list_date">Datum</label><div class="d-flex flex-row justify-content-between align-items-center"><input class="form-control mx-1 date optional" type="date" name="score_list[date]" id="score_list_date" /></div><small class="form-text text-muted">Mit Angabe dieses Datums kann man das allgemeine Datum des Wettkampfes auf dem PDF überschreiben. Dies ist nützlich, wenn der Wettkampf über mehrer Tage geht.</small></div>
+<div class="form-group string optional score_list_starting_time_string"><label class="control-label string optional" for="score_list_starting_time_string">Startzeit</label><input class="form-control string optional" type="time" step="60" name="score_list[starting_time_string]" id="score_list_starting_time_string" /><small class="form-text text-muted">Mit Angabe der Startzeit kann man dem Publikum signalisieren, wann es weiter geht. Es ist aber auch für die Berechnung bei Zeitgleichheit wichtig.</small></div>
 </div>
 </div>
 </fieldset>
