--- a/spec/fixtures/views/Score_List_uses_date_and_starting_time_edits_and_shows-with-date/view.html
+++ b/spec/fixtures/views/Score_List_uses_date_and_starting_time_edits_and_shows-with-date/view.html
@@ -146,29 +146,14 @@ Erweitert
 <table class='table'>
 <tr>
 <td style='width: 3rem'>
-<i class='far fa-eye-slash' title='Nicht öffentlich'></i>
-</td>
-<td>
-<img src="/assets/disciplines/hl.svg" width="20" height="20" />
-Hakenleitersteigen - Frauen - Lauf 1
-</td>
-<td class='hide-xs'>
-
-</td>
-<td class='text-end'>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID">Ansehen</a>
-</td>
-</tr>
-<tr>
-<td style='width: 3rem'>
 <i class='far fa-eye' title='Öffentlich'></i>
 </td>
 <td>
-<img src="/assets/disciplines/la.svg" width="20" height="20" />
-Löschangriff Nass - Frauen - Lauf 1
+
+Lauf 1
 </td>
 <td class='hide-xs'>
-
+29.01.2024
 </td>
 <td class='text-end'>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID">Ansehen</a>
