--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -323,3 +323,9 @@ span.best-badge, span.team-badge
 
 tr.best-time-of-run td, tr.best-time-of-run th
   background-color: #d9ffe1
+
+.blockquote
+  margin-left: 1em
+  padding-left: 1em
+  border-left: 3px solid darken($fs-gray, 5%)
+  font-size: 1em
