--- a/app/views/home/_help_header.html.haml
+++ b/app/views/home/_help_header.html.haml
@@ -1,4 +1,5 @@
 = page do |page|
   = page.tabs do |tabs|
     = tabs.link_to 'Hilfe', help_path, active: action_name == 'help'
+    = tabs.link_to 'Wertung', help_assessment_path, active: action_name == 'help_assessment'
     = tabs.link_to 'Multiplikatoren', disseminators_path, active: action_name == 'disseminators'
