--- a/spec/fixtures/views/Home_help_shows_help_page/view.html
+++ b/spec/fixtures/views/Home_help_shows_help_page/view.html
@@ -54,6 +54,10 @@
 </a>
 </div>
 <div class='nav-item'>
+<a class="nav-link" href="/help_assessment">Wertung
+</a>
+</div>
+<div class='nav-item'>
 <a class="nav-link" href="/disseminators">Multiplikatoren
 </a>
 </div>
