--- a/spec/fixtures/views/Home_disseminators_shows_disseminators_page/view.html
+++ b/spec/fixtures/views/Home_disseminators_shows_disseminators_page/view.html
@@ -66,6 +66,10 @@ Benutzer
 <a class="nav-link" href="/help">Hilfe
 </a>
 </div>
+<div class='nav-item'>
+<a class="nav-link" href="/help_assessment">Wertung
+</a>
+</div>
 <div class='nav-item active'>
 <a class="nav-link active" aria-current="page" href="/disseminators">Multiplikatoren
 </a>
