Typo und Siezen

--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -14,4 +14,4 @@
           = f.primary_button :submit, 'Passwort ändern'
   .col-lg-4
     = card_body do
-      Hier kannst du dir ein neues Passwort geben. Bitte nutze sichere Passwörter und speichere Sie dir im Zweifel ab. Schlecht gespeichert ist besser, als leicht zu erraten.
+      Hier kannst du dir ein neues Passwort geben. Bitte nutze sichere Passwörter und speichere sie dir im Zweifel ab. Schlecht gespeichert ist besser, als leicht zu erraten.
