--- a/app/views/home/help_assessment.html.haml
+++ b/app/views/home/help_assessment.html.haml
@@ -18,7 +18,7 @@
         %li Vergleich der Bestzeiten
         %li Vergleich der zweitbesten Zeiten (usw.)
         %li Anzahl gültiger Versuche
-        %li Bei weiterer Gleichheit: Wettkämpfer landen sie auf dem letzten Platz
+        %li Bei weiterer Gleichheit: Wettkämpfer landen auf dem letzten Platz
 
   .col-lg-6
     = card_body('Erläuterung') do
@@ -39,7 +39,7 @@
         %li Vergleich der Bestzeiten
         %li Vergleich der zweitbesten Zeiten (usw.)
         %li Anzahl gültiger Versuche
-        %li Bei weiterer Gleichheit: Wettkämpfer landen sie auf dem letzten Platz
+        %li Bei weiterer Gleichheit: Wettkämpfer landen auf dem letzten Platz
 
   .col-lg-6
     = card_body('Erläuterung') do
@@ -134,7 +134,7 @@
       %ol
         %li Vergleich der Bestzeiten einer Mannschaft
         %li Vergleich der zweitbesten Zeiten (usw.)
-        %li Bei weiterer Gleichheit: Mannschaften landen sie auf dem letzten Platz
+        %li Bei weiterer Gleichheit: Mannschaften landen auf dem letzten Platz
 
   .col-lg-6
     = card_body('Erläuterung') do
