--- a/spec/fixtures/views/Assessment_assessments_managements_uses_CRUD-edit-error/view.html
+++ b/spec/fixtures/views/Assessment_assessments_managements_uses_CRUD-edit-error/view.html
@@ -125,7 +125,7 @@ Erweitert
 </header>
 <div class='container mt-4'>
 <div class='alert-flash'>
-<div class='alert alert-danger'>Bitte überprüfen Sie folgende Fehler:</div>
+<div class='alert alert-danger'>Bitte überprüfe folgende Fehler:</div>
 </div>
 </div>
 <div class='pb-4 mt-4 container'>
