--- a/spec/fixtures/views/Score_List_edit_list_shows_form_and_updates-show-person/view.html
+++ b/spec/fixtures/views/Score_List_edit_list_shows_form_and_updates-show-person/view.html
@@ -259,7 +259,7 @@ Erweitert
 </div>
 </div>
 <div class='card-body'>
-<p>Die Startliste ist derzeit noch versteckt. Bitte geben Sie diese nach der Kontrolle frei.</p>
+<p>Die Startliste ist derzeit noch versteckt. Bitte gebe diese nach der Kontrolle frei.</p>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID/edit">Bearbeiten</a>
 
 </div>
