--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -5,4 +5,4 @@
     = render('form')
   .col-lg-4
     = card_body do
-      Hier kannst du dir ein Nutzerkonto registrieren. Bitte nutze <b>sichere Passwörter</b> und speichere Sie dir im Zweifel ab. Schlecht gespeichert ist besser, als leicht zu erraten. Im Anschluss musst du deine E-Mail-Adresse bestätigen.
+      Hier kannst du dir ein Nutzerkonto registrieren. Bitte nutze <b>sichere Passwörter</b> und speichere sie dir im Zweifel ab. Schlecht gespeichert ist besser, als leicht zu erraten. Im Anschluss musst du deine E-Mail-Adresse bestätigen.
