--- a/app/views/errors/unprocessable_entity.html.haml
+++ b/app/views/errors/unprocessable_entity.html.haml
@@ -14,5 +14,5 @@
     = card_body('Mögliche Lösungen') do
       %ul
         %li Erneut probieren
-        %li Probieren Sie andere Werte oder Daten aus
+        %li Probiere andere Werte oder Daten aus
         %li #{link_to('Entwickler', info_path)} über Fehler benachrichtigen
