--- a/spec/fixtures/views/Competition_competition_creations_creates_competition-new-error/view.html
+++ b/spec/fixtures/views/Competition_competition_creations_creates_competition-new-error/view.html
@@ -53,7 +53,7 @@ Benutzer
 </nav>
 <div class='container mt-4'>
 <div class='alert-flash'>
-<div class='alert alert-danger'>Bitte überprüfen Sie folgende Fehler:</div>
+<div class='alert alert-danger'>Bitte überprüfe folgende Fehler:</div>
 </div>
 </div>
 <div class='pb-4 mt-4 container'><div class='row g-4'>
