--- a/spec/fixtures/views/Competitions_Score_ListConditionsController_list_factory_creation_shows_warning_on_not_useful_conditions-new-with-warning/view.html
+++ b/spec/fixtures/views/Competitions_Score_ListConditionsController_list_factory_creation_shows_warning_on_not_useful_conditions-new-with-warning/view.html
@@ -125,7 +125,7 @@ Erweitert
 </header>
 <div class='container mt-4'>
 <div class='alert-flash'>
-<div class='alert alert-danger'>Bitte überprüfen Sie folgende Fehler:</div>
+<div class='alert alert-danger'>Bitte überprüfe folgende Fehler:</div>
 </div>
 </div>
 <div class='pb-4 mt-4 container'>
