--- a/spec/fixtures/views/Home_help_assessment_shows_help_assessment_page/view.html
+++ b/spec/fixtures/views/Home_help_assessment_shows_help_assessment_page/view.html
@@ -102,7 +102,7 @@
 <li>Vergleich der Bestzeiten</li>
 <li>Vergleich der zweitbesten Zeiten (usw.)</li>
 <li>Anzahl gültiger Versuche</li>
-<li>Bei weiterer Gleichheit: Wettkämpfer landen sie auf dem letzten Platz</li>
+<li>Bei weiterer Gleichheit: Wettkämpfer landen auf dem letzten Platz</li>
 </ol>
 
 </div>
@@ -145,7 +145,7 @@
 <li>Vergleich der Bestzeiten</li>
 <li>Vergleich der zweitbesten Zeiten (usw.)</li>
 <li>Anzahl gültiger Versuche</li>
-<li>Bei weiterer Gleichheit: Wettkämpfer landen sie auf dem letzten Platz</li>
+<li>Bei weiterer Gleichheit: Wettkämpfer landen auf dem letzten Platz</li>
 </ol>
 
 </div>
@@ -328,7 +328,7 @@
 <ol>
 <li>Vergleich der Bestzeiten einer Mannschaft</li>
 <li>Vergleich der zweitbesten Zeiten (usw.)</li>
-<li>Bei weiterer Gleichheit: Mannschaften landen sie auf dem letzten Platz</li>
+<li>Bei weiterer Gleichheit: Mannschaften landen auf dem letzten Platz</li>
 </ol>
 
 </div>
