--- a/spec/fixtures/views/User_GET_users_password_edit_renders_the_password_reset_form/view.html
+++ b/spec/fixtures/views/User_GET_users_password_edit_renders_the_password_reset_form/view.html
@@ -103,7 +103,7 @@
 <div class='col-lg-4'>
 <div class='card'>
 <div class='card-body'>
-Hier kannst du dir ein neues Passwort geben. Bitte nutze sichere Passwörter und speichere Sie dir im Zweifel ab. Schlecht gespeichert ist besser, als leicht zu erraten.
+Hier kannst du dir ein neues Passwort geben. Bitte nutze sichere Passwörter und speichere sie dir im Zweifel ab. Schlecht gespeichert ist besser, als leicht zu erraten.
 
 </div>
 </div>
