--- a/spec/fixtures/views/User_GET_users_sign_up_renders_registration_form/view.html
+++ b/spec/fixtures/views/User_GET_users_sign_up_renders_registration_form/view.html
@@ -115,7 +115,7 @@
 <div class='col-lg-4'>
 <div class='card'>
 <div class='card-body'>
-Hier kannst du dir ein Nutzerkonto registrieren. Bitte nutze <b>sichere Passwörter</b> und speichere Sie dir im Zweifel ab. Schlecht gespeichert ist besser, als leicht zu erraten. Im Anschluss musst du deine E-Mail-Adresse bestätigen.
+Hier kannst du dir ein Nutzerkonto registrieren. Bitte nutze <b>sichere Passwörter</b> und speichere sie dir im Zweifel ab. Schlecht gespeichert ist besser, als leicht zu erraten. Im Anschluss musst du deine E-Mail-Adresse bestätigen.
 
 </div>
 </div>
