--- a/spec/fixtures/views/competitions_unlockings_destroy_competition_uses_CRUD-new-error/view.html
+++ b/spec/fixtures/views/competitions_unlockings_destroy_competition_uses_CRUD-new-error/view.html
@@ -72,7 +72,7 @@ Benutzer
 </header>
 <div class='container mt-4'>
 <div class='alert-flash'>
-<div class='alert alert-danger'>Bitte überprüfen Sie folgende Fehler:</div>
+<div class='alert alert-danger'>Bitte überprüfe folgende Fehler:</div>
 </div>
 </div>
 <div class='pb-4 mt-4 container'>
