--- a/spec/fixtures/views/errors_GET_unprocessable_entity_renders_form/view.html
+++ b/spec/fixtures/views/errors_GET_unprocessable_entity_renders_form/view.html
@@ -76,7 +76,7 @@
 <div class='card-body'>
 <ul>
 <li>Erneut probieren</li>
-<li>Probieren Sie andere Werte oder Daten aus</li>
+<li>Probiere andere Werte oder Daten aus</li>
 <li><a href="/info">Entwickler</a> über Fehler benachrichtigen</li>
 </ul>
 
