--- a/app/views/competitions/score/results/_result_table_single.html.haml
+++ b/app/views/competitions/score/results/_result_table_single.html.haml
@@ -1,7 +1,7 @@
 %table.table.table-bordered
   %tr
     - if places
-      %th.hide-xs
+      %th
     - if result.competition.show_bib_numbers?
       %th.hide-xs Nr.
     %th Name
@@ -19,7 +19,7 @@
   - rows.each do |row|
     %tr
       - if places
-        %td.hide-xs #{row.place}.
+        %td #{row.place}.
       - if result.competition.show_bib_numbers?
         %td.hide-xs= row.entity&.bib_number
       %td
