--- a/spec/fixtures/views/competitions_score_results_starting_time_is_required_shows_a_warning-without-warning/view.html
+++ b/spec/fixtures/views/competitions_score_results_starting_time_is_required_shows_a_warning-without-warning/view.html
@@ -137,23 +137,22 @@ Erweitert
 <div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Hakenleitersteigen - Frauen</h4>
+<h4 class='m-0 py-2 ps-3'>Löschangriff Nass - Frauen</h4>
 </div>
 </div>
 <table class='table much-data'>
 <tr>
 <th>Name</th>
-<td>Hakenleitersteigen - Frauen</td>
+<td>Löschangriff Nass - Frauen</td>
 </tr>
 <tr>
 <th>Wertung</th>
-<td>Hakenleitersteigen - Frauen</td>
+<td>Löschangriff Nass - Frauen</td>
 </tr>
 <tr>
 <th>Mannschaftswertung</th>
 <td>
-Ja
-(2 von 8)
+Nein
 </td>
 </tr>
 <tr>
@@ -161,7 +160,10 @@ Ja
 <td>
 <table class='table table-condensed'>
 <tr>
-<td><a href="/2024/mv-cup/score/lists/UUID">Hakenleitersteigen - Frauen - Lauf 1</a></td>
+<td><a href="/2024/mv-cup/score/lists/UUID">Löschangriff Nass - Frauen - Lauf 1</a></td>
+</tr>
+<tr>
+<td><a href="/2024/mv-cup/score/lists/UUID">Löschangriff Nass - Frauen - Lauf 1</a></td>
 </tr>
 </table>
 </td>
@@ -173,13 +175,7 @@ Ja
 <div></div>
 <div>
 <div class='btn-group'>
-<a target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/results/UUID.pdf?only=group_assessment">Mannschaftswertung als PDF
-<i class='far fa-file-pdf'></i>
-</a>
-<a target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/results/UUID.pdf?only=single_competitors">Einzelwertung als PDF
-<i class='far fa-file-pdf'></i>
-</a>
-<a target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/results/UUID.pdf">Komplett als PDF
+<a target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/results/UUID.pdf">PDF
 <i class='far fa-file-pdf'></i>
 </a>
 <a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/results/UUID.xlsx">XLS
@@ -216,85 +212,44 @@ Ja
 <div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Hakenleitersteigen - Frauen</h4>
-</div>
-</div>
-<table class='table table-bordered'>
-<tr>
-<th></th>
-<th>Name</th>
-<th class='hide-xs'>Mannschaft</th>
-<th>Bestzeit</th>
-<th class='hide-xs'>Lauf 1</th>
-</tr>
-<tr><td colspan="100" class="xs-rotate-hint">Gerät drehen, um mehr Spalten zu sehen</td></tr>
-<tr>
-<td>1.</td>
-<td>
-Alfred1 Meier1
-
-</td>
-<td class='hide-xs'>Frauen-T</td>
-<td>
-<strong>12,00</strong>
-</td>
-<td class='hide-xs'>12,00</td>
-</tr>
-<tr>
-<td>2.</td>
-<td>
-Alfred2 Meier2
-
-</td>
-<td class='hide-xs'>Frauen-T</td>
-<td>
-<strong>13,00</strong>
-</td>
-<td class='hide-xs'>13,00</td>
-</tr>
-<tr>
-<td>3.</td>
-<td>
-Alfred3 Meier3
-
-</td>
-<td class='hide-xs'>Frauen-T</td>
-<td>
-<strong>14,00</strong>
-</td>
-<td class='hide-xs'>14,00</td>
-</tr>
-</table>
-
-
-</div>
-</div>
-<div class='col-lg-12 score-result-rows-table' data-content='group-rows'>
-<div class='card'>
-<div class='card-header p-0'>
-<div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Mannschaftswertung</h4>
+<h4 class='m-0 py-2 ps-3'>Löschangriff Nass - Frauen</h4>
 </div>
 </div>
 <table class='table table-bordered'>
 <tr>
 <th></th>
 <th>Mannschaft</th>
-<th>Zeit</th>
+<th>Bestzeit</th>
+<th class='hide-xs'>Lauf 1</th>
+<th class='hide-xs'>Lauf 1</th>
 </tr>
-<tr class=''>
+<tr><td colspan="100" class="xs-rotate-hint">Gerät drehen, um mehr Spalten zu sehen</td></tr>
+<tr>
 <td>1.</td>
-<th>Frauen-Team</th>
-<th>25,00</th>
-</tr>
-<tr class=''>
-<td></td>
-<td colspan='2'>
-<em>Alfred1 Meier1 (12,00 s), Alfred2 Meier2 (13,00 s)</em>
-<small>Alfred3 Meier3 (14,00 s)</small>
+<td>
+Frauen-Team 1
+
 </td>
+<td>
+<strong>19,12</strong>
+</td>
+<td class='hide-xs'>19,12</td>
+<td class='hide-xs'>19,13</td>
+</tr>
+<tr>
+<td>2.</td>
+<td>
+Frauen-Team 2
+
+</td>
+<td>
+<strong>19,12</strong>
+</td>
+<td class='hide-xs'>19,13</td>
+<td class='hide-xs'>19,12</td>
 </tr>
 </table>
+
 
 </div>
 </div>
