--- a/spec/fixtures/views/competitions_score_results_results_managements_uses_CRUD-show/view.html
+++ b/spec/fixtures/views/competitions_score_results_results_managements_uses_CRUD-show/view.html
@@ -190,7 +190,7 @@ Ja
 
 </div>
 <div class='col-lg-4'>
-<div class='card'>
+<div class='card mb-3'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
 <h4 class='m-0 py-2 ps-3'>Aktionen</h4>
