--- a/spec/fixtures/views/Band_bands_managements_uses_CRUD-edit-error/view.html
+++ b/spec/fixtures/views/Band_bands_managements_uses_CRUD-edit-error/view.html
@@ -147,7 +147,7 @@ Erweitert
 <div class='card-footer'>
 <div class='d-flex justify-content-between align-items-start'>
 <div><button name="button" type="submit" class="btn btn-primary" data-disable-with="Bitte warten...">Wertungsgruppe aktualisieren</button>
-<a class="btn btn-secondary" href="/2024/mv-cup/bands">Abbrechen</a>
+<a class="btn btn-secondary" href="/2024/mv-cup/bands/UUID">Abbrechen</a>
 </div>
 </div>
 </div>
