--- a/spec/fixtures/views/Team_teams_managements_uses_CRUD-edit/view.html
+++ b/spec/fixtures/views/Team_teams_managements_uses_CRUD-edit/view.html
@@ -172,7 +172,7 @@ Keine Verknüpfung mit einer vorhandenen Mannschaft
 <div class='card-footer'>
 <div class='d-flex justify-content-between align-items-start'>
 <div><button name="button" type="submit" class="btn btn-primary" data-disable-with="Bitte warten...">Mannschaft aktualisieren</button>
-<a class="btn btn-secondary" href="/2024/mv-cup/teams">Abbrechen</a>
+<a class="btn btn-secondary" href="/2024/mv-cup/teams/UUID">Abbrechen</a>
 </div>
 </div>
 </div>
