--- a/spec/fixtures/views/competition_team_imports_team_import_process_uses_import_rows-new-with-errors/view.html
+++ b/spec/fixtures/views/competition_team_imports_team_import_process_uses_import_rows-new-with-errors/view.html
@@ -135,7 +135,7 @@ Erweitert
 <div class='card-footer'>
 <div class='d-flex justify-content-between align-items-start'>
 <div><button name="button" type="submit" class="btn btn-primary" data-disable-with="Bitte warten...">Importieren</button>
-<a class="btn btn-secondary" href="/2024/mv-cup/score/results">Abbrechen</a>
+<a class="btn btn-secondary" href="/2024/mv-cup/teams">Abbrechen</a>
 </div>
 </div>
 </div>
