--- a/app/views/competitions/team_imports/new.html.haml
+++ b/app/views/competitions/team_imports/new.html.haml
@@ -11,4 +11,4 @@
 
         - c.footer do
           = f.primary_button :submit, 'Importieren'
-          = f.cancel_button(competition_score_results_path)
+          = f.cancel_button(competition_teams_path)
