--- a/spec/fixtures/views/People_People_managements_uses_CRUD-edit/view.html
+++ b/spec/fixtures/views/People_People_managements_uses_CRUD-edit/view.html
@@ -200,7 +200,7 @@ Keine Verknüpfung mit einer vorhandenen Person
 <div class='card-footer'>
 <div class='d-flex justify-content-between align-items-start'>
 <div><button name="button" type="submit" class="btn btn-primary" data-disable-with="Bitte warten...">Wettkämpfer aktualisieren</button>
-<a class="btn btn-secondary" href="/2024/mv-cup/people">Abbrechen</a>
+<a class="btn btn-secondary" href="/2024/mv-cup/people/UUID">Abbrechen</a>
 </div>
 </div>
 </div>
