--- a/spec/fixtures/views/Team_teams_managements_uses_CRUD-new-with-errors/view.html
+++ b/spec/fixtures/views/Team_teams_managements_uses_CRUD-new-with-errors/view.html
@@ -147,6 +147,8 @@ Erweitert
 </div>
 <div class="form-group string required team_shortcut form-group-invalid"><label class="control-label string required" for="team_shortcut">Abkürzung <abbr title="required">*</abbr></label><input class="form-control is-invalid string required" maxlength="12" aria-invalid="true" size="12" type="text" name="team[shortcut]" id="team_shortcut" /><div class="invalid-feedback">Abkürzung muss ausgefüllt werden</div><small class="form-text text-muted">Keine Nummern im Namen angeben!</small></div>
 <div class="form-group integer required team_number form-group-valid"><label class="control-label integer required" for="team_number">Nummer <abbr title="required">*</abbr></label><input class="form-control numeric integer required" type="number" step="1" value="1" name="team[number]" id="team_number" /><small class="form-text text-muted">Die Nummer wird erst angezeigt, wenn es mehrere Mannschaften mit gleichen Namen gibt.</small></div>
+<div class='row'>
+</div>
 <input autocomplete="off" type="hidden" name="team[fire_sport_statistics_team_id]" id="team_fire_sport_statistics_team_id" />
 <div class='mb-0 mt-3'>Verknüpfung</div>
 <div class='alert alert-success mb-0 d-none' id='fire-sport-connected'>
