--- a/spec/fixtures/views/People_when_firesport_statistics_is_not_connected_shows_dialog-without-warning/view.html
+++ b/spec/fixtures/views/People_when_firesport_statistics_is_not_connected_shows_dialog-without-warning/view.html
@@ -142,7 +142,6 @@ Erweitert
 </a>
 </div>
 </div>
-<div class='card-body'>
 <table class='table table-bordered table-hover'>
 <thead>
 <tr>
@@ -174,10 +173,10 @@ Informationen auf Feuerwehrsport-Statistik.de über Alfred Meier
 </table>
 
 
-</div>
 <div class='card-footer'>
 <div class='d-flex justify-content-between align-items-start'>
-<div></div>
+<div><small>1 Wettkämpfer</small>
+</div>
 <div>
 <div class='btn-group'>
 <a target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/people.pdf">PDF
