--- a/spec/fixtures/views/People_People_managements_uses_CRUD-index-with-one/view.html
+++ b/spec/fixtures/views/People_People_managements_uses_CRUD-index-with-one/view.html
@@ -149,7 +149,6 @@ Erweitert
 </a>
 </div>
 </div>
-<div class='card-body'>
 <table class='table table-bordered table-hover'>
 <thead>
 <tr>
@@ -179,10 +178,10 @@ first-name last-name
 </table>
 
 
-</div>
 <div class='card-footer'>
 <div class='d-flex justify-content-between align-items-start'>
-<div></div>
+<div><small>1 Wettkämpfer</small>
+</div>
 <div>
 <div class='btn-group'>
 <a target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/people.pdf">PDF
