--- a/spec/fixtures/views/TeamMarkerBlockValue_team_marker_values_managements_uses_CRUD-teams2/view.html
+++ b/spec/fixtures/views/TeamMarkerBlockValue_team_marker_values_managements_uses_CRUD-teams2/view.html
@@ -179,7 +179,8 @@ Frauen-Team
 
 <div class='card-footer'>
 <div class='d-flex justify-content-between align-items-start'>
-<div></div>
+<div><small>1 Mannschaft</small>
+</div>
 <div>
 <div class='btn-group'>
 <a target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/teams.pdf">PDF
